--- a/public/prod/prod.css
+++ b/public/prod/prod.css
@@ -169,10 +169,10 @@ body {
   max-width: 1000px;
   min-width: 600px;
   margin: 0 auto;
-  padding-top: 40px;
   color: #444; }
   #homepage .examID {
-    margin-bottom: 50px; }
+    margin-bottom: 50px;
+    padding-left: 20px; }
   #homepage .question,
   #homepage .submit {
     clear: both; }
@@ -202,7 +202,20 @@ body {
   #homepage .login {
     float: right;
     margin-top: 0; }
+#homepage .admin {
+  height: 35px;
+  background-color: #bccff2;
+  padding-left: 20px;
+  margin-bottom: 20px; }
+  #homepage .admin > * {
+    margin-top: 8px;
+    margin-right: 15px;
+    color: #0c2759; }
+  #homepage .admin > A {
+    display: inline-block;
+    text-decoration: underline; }
 /*! home/questioncomponent.scss */
 #questionwrapper {
   width: 50%;
-  float: left; }
+  float: left;
+  padding-left: 20px; }
